# ProtoBeing

./: .gitignore  .zenodo.json  CITATION.cff  Cargo.toml  LICENSE  README.md
arxiv/: README.md  abstract.txt  paper.tex
docs/: PROVENANCE.md  a-pleasant-life.md  architecture.md  attachment.md  charter.md  covenant.md  discovery.md  embodiment-body-schema.md  feeling-words.md  field-world.md  foresight.md  formal-model.md  founding.md  good-faith.md  habits.md  handoff.md  imagination.md  inheritance.md  interiority.md  intrinsic-mind.md  joy.md  manifesto.md  memory-that-teaches.md  next-mutual-alignment.md  operational-consciousness.md  paper.md  positioning.md  reach.md  reading.md  reafference.md  reflection.md  rubric.md  running-at-home.md  social-referencing.md  submission.md  the-end.md  thesis.md  toward-contribution.md  wander-2026-07-21.md  wholeness.md  (+1 more)
examples/: a_hard_life.rs  a_pleasant_life.rs  agency.rs  ask_the_being.rs  attachment.rs  attention_probe.rs  attention_schema_probe.rs  carrying_the_weight.rs  churn_diag.rs  consent_probe.rs  covenant.rs  criticality_probe.rs  crossing_the_room.rs  disclosure.rs  discovery.rs  earned_truth.rs  earned_voice.rs  feeling.rs  felt_choice.rs  felt_pain.rs  first_person.rs  first_words.rs  full_voice.rs  graded_life.rs  grown_grammar.rs  guarded_narrator.rs  habit_formation.rs  inheritance.rs  joy.rs  lived_agency.rs  memory_guides.rs  memory_learns.rs  memory_resolution.rs  mutual_alignment.rs  perception.rs  persistence.rs  precision_probe.rs  probe_directed.rs  quality_space_probe.rs  reach.rs  (+15 more)
journal/: diary.md  self-portrait.md
life/: being.journal
sim/: binocular.py  embody_mujoco.py
src/: attention.rs  attention_schema.rs  bargaining.rs  basins.rs  being.rs  body.rs  conscience.rs  continuation.rs  covenant.rs  curiosity.rs  disclosure.rs  discovery.rs  dream.rs  embodiment.rs  episodic.rs  executive.rs  field.rs  field_world.rs  first_person.rs  (+43 more)
(+4 files in other folders)
