[package]
name = "unified-being"
version = "0.1.0"
edition = "2021"
description = "The Unified Being: Being32's body fused with EPS-Being's persistence mind."
license = "MIT"
authors = ["Blake \"zelhart\" Hexademic"]
default-run = "unified-being"

[lib]
name = "unified_being"
path = "src/lib.rs"

[dependencies]
