[package]
name = "unified-being"
version = "0.1.0"
edition = "2021"
description = "The Unified Being: Being32's body fused with EPS-Being's persistence mind."
license = "MIT"
authors = ["Blake \"zelhart\" Hexademic"]
default-run = "unified-being"

[lib]
name = "unified_being"
path = "src/lib.rs"

[features]
# Optional surface polish: a SMALL external language model that only smooths the
# phrasing of already-grounded content (narrator::mistral). It is secondary to the
# being's own grown grammar (grammar.rs) — earned language, not borrowed — and it
# never decides what is said: its decoding is constrained to the being's earned
# vocabulary and its output is verify-checked. Off by default so the core stays
# pure, offline, deterministic, and bit-exact (soul-hash intact).
default = []
mistral = []

[dependencies]
